@@ -598,7 +598,8 @@
 (define-syntax (_fun stx)
   (_fun* stx #f))
 (define-syntax (_fun/static stx)
-  (_fun* stx #t))
+  ;; static requests are currently disabled:
+  (_fun* stx #f))
 (define-for-syntax (_fun* stx static?)
   (define (err msg . sub) (apply raise-syntax-error '_fun msg stx sub))
   (define xs     #f)
